# 20260416

./: .gitignore  ProjectFileCompare.spec  README.md  TAURI_REWRITE.md  build_exe.bat  build_installer.bat  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
installer/: ProjectFileCompare.iss
src/: __init__.py  compare.py  config.py  config_store.py  discovery.py  gui.py  hollysys_batch_download.py  models.py  normalizers.py  process_state.py  runtime_logging.py  workflow.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  mod.rs  state.rs  workflow.rs
src-tauri/src/core/: browser_login.rs  cancel.rs  compare.rs  config.rs  discovery.rs  download.rs  mod.rs  models.rs  normalizers.rs  secret_store.rs  workflow.rs
src-tauri/src/db/: app_state.rs
src-tauri/src/readers/: docx.rs  excel.rs  mod.rs  pdf.rs  signature_text.rs  web_txt.rs
src-tauri/src/writers/: mod.rs  success_excel.rs
src/readers/: __init__.py  docx_reader.py  pdf_reader.py  signature_ai.py  signature_text_parser.py  xlsx_reader.py
src/webui/: app.css  app.js  index.html
src/writers/: __init__.py  error_writer.py  result_log_writer.py  success_writer.py
tests/: conftest.py  test_compare.py  test_config.py  test_config_store.py  test_discovery.py  test_docx_reader.py  test_gui.py  test_hollysys_batch_download.py  test_main.py  test_pdf_reader.py  test_process_state.py  test_result_log_writer.py  test_runtime_logging.py  test_signature_ai.py  test_signature_text_parser.py  test_smoke.py  test_success_writer.py  test_workflow.py  test_xlsx_reader.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  app.css  main.tsx
web/src/components/: CompareLogTable.tsx  ConsoleSidebar.tsx  SettingsModal.tsx  WorkspacePanel.tsx  logUtils.ts
