[package]
name = "project-file-compare"
version = "0.1.10"
description = "项目资料比对助手"
authors = ["Project File Compare"]
edition = "2021"

[lib]
name = "project_file_compare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
calamine = { version = "0.31.0", features = ["chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
encoding_rs = "0.8.35"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
keyring = { version = "3.6", features = ["apple-native", "windows-native"] }
open = "5.3.3"
pdfium-auto = { version = "0.3.0", features = ["bundled"] }
pdfium-render = "0.8.37"
pinyin = { version = "0.11.0", default-features = false, features = ["plain"] }
quick-xml = "0.38.3"
rayon = "1.10.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "cookies", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
umya-spreadsheet = "2.3.3"
walkdir = "2.5.0"
zip = "5.1.1"

[target.'cfg(windows)'.dependencies]
tungstenite = "0.28.0"

[features]
default = []
